// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spacer slice renders correctly 1`] = `
<section
  class="text-slice text-slice--white-theme"
  style="background-color: rgb(245, 247, 249);"
>
  <div
    class="container"
  >
    <transition-stub
      name="fade"
    >
      <lazyhydrate-stub
        idletimeout="2000"
        whenvisible="true"
      >
        <!---->
      </lazyhydrate-stub>
    </transition-stub>
  </div>
</section>
`;

exports[`TextSlice slice should correctly render SimpleText component 1`] = `
<div>
  <section
    class="text-slice text-slice--white-theme"
    style="background-color: rgb(245, 247, 249);"
  >
    <div
      class="container"
    >
      <transition-stub
        name="fade"
      >
        <lazyhydrate-stub
          idletimeout="2000"
          whenvisible="true"
        >
          <simpletext-stub
            colortheme="silver"
            data-testid="text-slice-default"
            size-lg="80px"
            size-md="70px"
            size-sm="60px"
            size-xl="90px"
            size-xs="50px"
          />
        </lazyhydrate-stub>
      </transition-stub>
    </div>
  </section>
</div>
`;

exports[`TextSlice slice should correctly render Title component 1`] = `
<div>
  <section
    class="text-slice text-slice--white-theme"
    style="background-color: rgb(245, 247, 249);"
  >
    <div
      class="container"
    >
      <transition-stub
        name="fade"
      >
        <lazyhydrate-stub
          idletimeout="2000"
          whenvisible="true"
        >
          <title-stub
            colortheme="silver"
            data-testid="text-slice-title"
            size="size-md"
            size-lg="80px"
            size-md="70px"
            size-sm="60px"
            size-xl="90px"
            size-xs="50px"
          />
        </lazyhydrate-stub>
      </transition-stub>
    </div>
  </section>
</div>
`;

exports[`TextSlice slice should correctly render TitleText component 1`] = `
<div>
  <section
    class="text-slice text-slice--white-theme"
    style="background-color: rgb(245, 247, 249);"
  >
    <div
      class="container"
    >
      <transition-stub
        name="fade"
      >
        <lazyhydrate-stub
          idletimeout="2000"
          whenvisible="true"
        >
          <titletext-stub
            colortheme="silver"
            data-testid="text-slice-titleText"
            size-lg="80px"
            size-md="70px"
            size-sm="60px"
            size-xl="90px"
            size-xs="50px"
          />
        </lazyhydrate-stub>
      </transition-stub>
    </div>
  </section>
</div>
`;

exports[`TextSlice slice should correctly render flexibleParagraph component 1`] = `
<div>
  <section
    class="text-slice text-slice--white-theme"
    style="background-color: rgb(245, 247, 249);"
  >
    <div
      class="container"
    >
      <transition-stub
        name="fade"
      >
        <lazyhydrate-stub
          idletimeout="2000"
          whenvisible="true"
        >
          <flexibleparagraph-stub
            colortheme="silver"
            data-testid="text-slice-flexibleParagraph"
            size="size-md"
            size-lg="80px"
            size-md="70px"
            size-sm="60px"
            size-xl="90px"
            size-xs="50px"
          />
        </lazyhydrate-stub>
      </transition-stub>
    </div>
  </section>
</div>
`;

exports[`TextSlice slice should correctly render paragraph component 1`] = `
<div>
  <section
    class="text-slice text-slice--white-theme"
    style="background-color: rgb(245, 247, 249);"
  >
    <div
      class="container"
    >
      <transition-stub
        name="fade"
      >
        <lazyhydrate-stub
          idletimeout="2000"
          whenvisible="true"
        >
          <paragraph-stub
            colortheme="silver"
            data-testid="text-slice-paragraph"
            size="size-md"
            size-lg="80px"
            size-md="70px"
            size-sm="60px"
            size-xl="90px"
            size-xs="50px"
          />
        </lazyhydrate-stub>
      </transition-stub>
    </div>
  </section>
</div>
`;

exports[`TextSlice slice should correctly render titleTextButton component 1`] = `
<div>
  <section
    class="text-slice text-slice--white-theme"
    style="background-color: rgb(245, 247, 249);"
  >
    <div
      class="container"
    >
      <transition-stub
        name="fade"
      >
        <lazyhydrate-stub
          idletimeout="2000"
          whenvisible="true"
        >
          <titletextbutton-stub
            colortheme="silver"
            data-testid="text-slice-titleTextButton"
            size-lg="80px"
            size-md="70px"
            size-sm="60px"
            size-xl="90px"
            size-xs="50px"
          />
        </lazyhydrate-stub>
      </transition-stub>
    </div>
  </section>
</div>
`;
